tests/snapshots/sfc/js/patches__type_keyword_in_conditional.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode, toDisplayString as _toDisplayString } from "vue"


interface Item {
  type: string;
  value: number;
}

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    item: { type: null, required: true }
  },
  setup(__props: any) {

const props = __props

return (_ctx: any,_cache: any) => {
  return (__props.item.type === 'special')
      ? (_openBlock(), _createElementBlock("div", { key: 0 }, _toDisplayString(__props.item.value), 1 /* TEXT */))
      : _createCommentVNode("v-if", true)
}
}

})
